--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div class="bottom">
                 <div class="item namerole">
                     <div class="name">Gayatri Loungani</div>
-                    <div class="role">MNNIT, Allahabad, Uttar Pradesh</div>
+                    <div class="role">Student</div>
                 </div>
                 <div class="item profile">
                     <div class="title">Profile</div>
-                    <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, et.</div>
+                    <div class="info">WEB DEVELOPER</div>
                 </div>
                 <div class="item address">
                     <div class="title">Address</div>
@@ -74,6 +74,27 @@
                                 </p>
                             </div>
                         </div>
+
+                        <div class="skills_list">
+                            <div class="skills_left">REACT</div>
+                            <div class="skills_bar">
+                                <p>
+                                    <span style="width: 70%"></span>
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="skills_list">
+                            <div class="skills_left">NODE.JS</div>
+                            <div class="skills_bar">
+                                <p>
+                                    <span style="width: 80%"></span>
+                                </p>
+                            </div>
+                        </div>
+
+
+                        
                     </div>
                 </div>
                
@@ -84,53 +105,59 @@
         <div class="resume_right">
             <div class="item namerole">
                 <div class="name">Gayatri Loungani</div>
-                <div class="role">WEB DEVELOPER</div>
+                <!-- <div class="role">WEB DEVELOPER</div> -->
             </div>
             <div class="item education">
                 <div class="title">Education</div>
                 <div class="info">
                     <div class="data">
-                        <div class="year">2000 - 2010</div>
+                        <div class="year">2017 - 2018</div>
                         <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia omnis cumque praesentium, tenetur, dolores temporibus accusantium in, dolore quasi vel ipsum animi facilis explicabo iusto hic quam! Facere, minus explicabo?</p>
+                            <p>Class 10th, CBSE Board</p>
+                            <p>Tagore Public School , Jaipur , Rajasthan</p>
+                            <p>Percentage : 91.6%</p>
                         </div>
                     </div>
 
                     <div class="data">
-                        <div class="year">2000 - 2010</div>
+                        <div class="year">2019 - 2020</div>
                         <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia omnis cumque praesentium, tenetur, dolores temporibus accusantium in, dolore quasi vel ipsum animi facilis explicabo iusto hic quam! Facere, minus explicabo?</p>
+                            <p>Class 12th, CBSE Board</p>
+                            <p>Tagore Public School , Jaipur , Rajasthan</p>
+                            <p>Percentage : 94.8% [PCM]</p>    
                         </div>
                     </div>
 
                     <div class="data">
-                        <div class="year">2000 - 2010</div>
+                        <div class="year">2021 - 2025</div>
                         <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia omnis cumque praesentium, tenetur, dolores temporibus accusantium in, dolore quasi vel ipsum animi facilis explicabo iusto hic quam! Facere, minus explicabo?</p>
+                            <p>MNNIT, Prayagraj, Uttar Pradesh</p>
+                            <p>B.Tech in Mechanical Engineering</p>
+                            <p>3rd year</p>
+                            <p>CPI : 8.01 (till 5th semester)</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="item experience">
-                <div class="title">Experience</div>
+                <div class="title">PROJECTS</div>
 
                 <div class="info">
                     <div class="data">
-                        <div class="year">2000 - 2010</div>
+                        <div class="year">March - June 2023</div>
                         <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia omnis cumque praesentium, tenetur, dolores temporibus accusantium in, dolore quasi vel ipsum animi facilis explicabo iusto hic quam! Facere, minus explicabo?</p>
+                            <p>TROVE</p>
+                            <p> It’s an online store of a valuable and creative homemade products made by women. This website provides a channel
+                                to women who can’t afford to travel to showcase their talent and art. It provides an easy to access platform where
+                                such women can sell their homemade fancy and creative products</p>
                         </div>
                     </div>
 
                     <div class="data">
-                        <div class="year">2000 - 2010</div>
+                        <div class="year">Jan 2024</div>
                         <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia omnis cumque praesentium, tenetur, dolores temporibus accusantium in, dolore quasi vel ipsum animi facilis explicabo iusto hic quam! Facere, minus explicabo?</p>
+                            <p>LEARN LOCATE</p>
+                            <p>It is a website made for student who are finding difficulty in finding good coaching centers in there nearby locality. This is mainly for the student who came in class 11th and finding coaching centers for their respective examination preparation according to their choosen career path.</p>
                         </div>
                     </div>
 
